seaweedfs/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seaweedfs-ui
  namespace: seaweedfs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seaweedfs-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: seaweedfs-ui
    spec:
      containers:
      - command:
        - /bin/sh
        - -ec
        - |
          exec /usr/bin/weed admin \
          -port=8080 \
          -masters="seaweedfs-master:9333" \
          -dataDir="/var/lib/seaweedfs-admin" \
          -adminUser=admin \
          -adminPassword=strongpassword123
        image: chrislusf/seaweedfs:3.96
        imagePullPolicy: IfNotPresent
        name: swfs-ui
        ports:
        - containerPort: 8080
          protocol: TCP
