seaweedfs/filer-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: filer
    app.kubernetes.io/instance: seaweedfs
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: seaweedfs
    helm.sh/chart: seaweedfs-4.0.1
  name: seaweedfs-filer
  namespace: kubevirt
spec:
  internalTrafficPolicy: Cluster
  ipFamilyPolicy: SingleStack
  ports:
  - name: swfs-filer
    port: 8888
    protocol: TCP
    targetPort: 8888
  - name: swfs-filer-grpc
    port: 18888
    protocol: TCP
    targetPort: 18888
  - name: swfs-s3
    port: 8333
    protocol: TCP
    targetPort: 8333
  - name: metrics
    port: 9327
    protocol: TCP
    targetPort: 9327
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/component: filer
    app.kubernetes.io/name: seaweedfs
  sessionAffinity: None
  type: LoadBalancer
