seaweedfs/grpc-filer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: GRPC
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required - SW-Filer
    nginx.ingress.kubernetes.io/auth-secret: default/ingress-basic-auth-secret
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/configuration-snippet: |
      sub_filter '<head>' '<head> <base href="/sw-filer-grpc/">'; #add base url
      sub_filter '="/' '="./';                               #make absolute paths to relative
      sub_filter '=/' '=./';
      sub_filter '/seaweedfsstatic' './seaweedfsstatic';
      sub_filter_once off;
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
  generation: 17
  labels:
    app.kubernetes.io/component: filer
    app.kubernetes.io/instance: seaweedfs
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: seaweedfs
    pelm.sh/chart: seaweedfs-4.0.1
  name: grpc-ingress-seaweedfs-filer
  namespace: kubevirt
spec:
  ingressClassName: nginx
  rules:
  - host: s3.buildstars.online
    http:
      paths:
      - backend:
          service:
            name: seaweedfs-filer
            port:
              number: 8888
        path: /sw-filer-grpc/?(.*)
        pathType: ImplementationSpecific
